Use cfacter in docker file

--- a/docker/conf.d/puppetserver.conf
+++ b/docker/conf.d/puppetserver.conf
@@ -2,7 +2,7 @@
 jruby-puppet: {
     # Where the puppet-agent dependency places puppet, facter, etc...
     # Puppet server expects to load Puppet from this location
-    ruby-load-path: [/puppet/lib, /facter/lib, /hiera/lib]
+    ruby-load-path: [ /usr/local/lib/site_ruby/2.5.0/, /usr/lib/ruby/vendor_ruby/ ]
 
     # This setting determines where JRuby will install gems.  It is used for loading gems,
     # and also by the `puppetserver gem` command line tool.
